--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@ collapse system in div container may not work  -->
         <div class="carousel-item active">
           <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-          <em class="pebbles">Pebbles, New York</em>
+          <em class="pebbles">Banglore,India</em>
         </div>
 
         <div class="carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
+          <em>Hyderabad, India</em>
         </div>
 
       </div>
@@ -238,7 +238,7 @@ collapse system in div container may not work  -->
         <h3>Labrador</h3>
       </div>
       <div class="card-body">
-        <h2 class="price-text">$49 / mo</h2>
+        <h2 class="price-text">₹49 / mo</h2>
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
         <p>Unlimited App Usage</p>
@@ -256,7 +256,7 @@ collapse system in div container may not work  -->
         <h3>Mastiff</h3>
       </div>
       <div class="card-body">
-        <h2 class="price-text">$99 / mo</h2>
+        <h2 class="price-text">₹99 / mo</h2>
         <p>Pirority Listing</p>
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
